# arcana-cloud-rust

./: .gitignore  Cargo.toml  Dockerfile.ci  Dockerfile.coverage  Jenkinsfile  README.md  docker-compose.ci.yml  docker-compose.coverage.yml  docker-compose.tarpaulin.yml  docker-compose.test.yml  sonar-project.properties
config/: default.toml  layeredgrpc.toml  production.toml
crates/arcana-config/: Cargo.toml
crates/arcana-config/src/: app_config.rs  deployment.rs  lib.rs  loader.rs  validation.rs
crates/arcana-core/: Cargo.toml
crates/arcana-core/src/: error.rs  id.rs  lib.rs  pagination.rs  result.rs  telemetry.rs  traits.rs  validation.rs
crates/arcana-core/src/domain/: mod.rs
crates/arcana-core/src/domain/entities/: audit_log.rs  oauth_token.rs  user.rs
crates/arcana-core/src/domain/events/: auth_events.rs  mod.rs  user_events.rs
crates/arcana-core/src/domain/value_objects/: email.rs  role.rs  status.rs
crates/arcana-domain/: Cargo.toml
crates/arcana-domain/src/: lib.rs
crates/arcana-domain/src/entities/: audit_log.rs  mod.rs  oauth_token.rs  user.rs
crates/arcana-domain/src/events/: auth_events.rs  user_events.rs
crates/arcana-domain/src/value_objects/: email.rs  mod.rs  role.rs  status.rs
crates/arcana-grpc/: Cargo.toml  build.rs
crates/arcana-grpc/src/: lib.rs  server.rs  tls.rs
crates/arcana-grpc/src/clients/: auth_client.rs  http_user_client.rs  mod.rs  repository_client.rs  user_client.rs
crates/arcana-grpc/src/interceptors/: auth.rs  mod.rs
crates/arcana-grpc/src/proto/: mod.rs
crates/arcana-grpc/src/services/: auth_service.rs  health_service.rs  jobs_service.rs  mod.rs  repository_service.rs  user_service.rs
crates/arcana-jobs/: Cargo.toml
crates/arcana-jobs/src/: config.rs  di.rs  error.rs  job.rs  lib.rs  metrics.rs  queue.rs  retry.rs  scheduler.rs  status.rs  worker.rs  worker_registry.rs
crates/arcana-jobs/src/redis/: mod.rs  queue.rs
crates/arcana-plugin-api/: Cargo.toml
crates/arcana-plugin-api/src/: lib.rs
crates/arcana-plugin-api/src/extensions/: mod.rs
crates/arcana-plugin-runtime/: Cargo.toml
crates/arcana-plugin-runtime/src/: lib.rs  manager.rs
crates/arcana-repository/: Cargo.toml
crates/arcana-repository/src/: lib.rs  pool.rs  traits.rs
crates/arcana-repository/src/dao/: mod.rs  user_dao.rs
crates/arcana-repository/src/dao/impl/: mod.rs
crates/arcana-repository/src/dao/impl/mysql/: mod.rs  user_dao_impl.rs
crates/arcana-repository/src/impl/: mod.rs  user_repository_impl.rs
crates/arcana-repository/src/mysql/: mod.rs  user_dao_impl.rs  user_repository.rs
crates/arcana-repository/tests/: user_repository_test.rs
crates/arcana-repository/tests/common/: mod.rs
crates/arcana-resilience/: Cargo.toml
crates/arcana-resilience/src/: lib.rs
crates/arcana-resilience/src/circuit_breaker/: mod.rs
crates/arcana-resilience/src/rate_limiter/: mod.rs
crates/arcana-resilience/src/retry/: mod.rs
crates/arcana-resilience/src/timeout/: mod.rs
crates/arcana-rest/: Cargo.toml
crates/arcana-rest/src/: lib.rs  openapi.rs  router.rs  state.rs
crates/arcana-rest/src/controllers/: auth_controller.rs  health_controller.rs  jobs_controller.rs  mod.rs  user_controller.rs
crates/arcana-rest/src/extractors/: claims.rs  mod.rs  pagination.rs  validated.rs
crates/arcana-rest/src/middleware/: auth.rs  logging.rs  mod.rs
crates/arcana-rest/src/responses/: mod.rs
crates/arcana-security/: Cargo.toml
crates/arcana-security/src/: lib.rs
crates/arcana-security/src/jwt/: claims.rs  mod.rs  token_provider.rs
crates/arcana-security/src/password/: hasher.rs  mod.rs
crates/arcana-security/src/rbac/: checker.rs  mod.rs
crates/arcana-server/: Cargo.toml
crates/arcana-server/benches/: protocol_benchmark.rs
crates/arcana-server/src/: app.rs  di.rs  lib.rs  main.rs  startup.rs
crates/arcana-service/: Cargo.toml
crates/arcana-service/src/: auth_service.rs  lib.rs  user_service.rs
crates/arcana-service/src/cache/: cache_interface.rs  cache_keys.rs  mod.rs  redis_cache.rs
crates/arcana-service/src/dto/: auth_dto.rs  mod.rs  user_dto.rs
crates/arcana-service/src/impl/: auth_service_impl.rs  mod.rs  user_service_impl.rs
crates/arcana-service/src/mappers/: mod.rs
crates/arcana-ssr-engine/: Cargo.toml
crates/arcana-ssr-engine/src/: lib.rs
deployment/kubernetes/: BENCHMARK.md  README.md  configmap.yaml  controller-deployment.yaml  ingress.yaml  kind-config.yaml  kustomization.yaml  mysql-deployment.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  rbac.yaml  repository-deployment.yaml  secrets.yaml  service-deployment.yaml
deployment/kubernetes/ci/: kind-ci-grpc.yaml
deployment/kubernetes/jobs/: config.yaml  kustomization.yaml  redis-deployment.yaml  scheduler-deployment.yaml  worker-deployment.yaml
deployment/kubernetes/overlays/dev/: kustomization.yaml
deployment/kubernetes/overlays/grpc/: kustomization.yaml
deployment/kubernetes/overlays/http/: kustomization.yaml
deployment/kubernetes/overlays/production/: kustomization.yaml
deployment/kubernetes/overlays/production/jobs/: kustomization.yaml
deployment/layered/: .env.example  Dockerfile  docker-compose-ci-grpc.yml  docker-compose.yml
deployment/monolithic/: Dockerfile  docker-compose.yml
migrations/: 20241226000001_create_users_table.sql  20241226000002_create_oauth_tokens_table.sql  20241226000003_create_audit_logs_table.sql
plugins/arcana-audit-plugin/: Cargo.toml
plugins/arcana-audit-plugin/src/: lib.rs
proto/: auth_service.proto  common.proto  health.proto  jobs.proto  repository_service.proto  user_service.proto
scripts/: benchmark.sh  integration-smoke-test.sh  kind-smoke-test.sh  run-coverage.sh
