[package]
name = "arcana-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Configuration management for Arcana Cloud Rust"

[dependencies]
arcana-core.workspace = true
config.workspace = true
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
dotenvy.workspace = true
tracing.workspace = true
url = "2.5"
tokio = { workspace = true, features = ["sync"] }
shaku.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.14"
