[package]
name = "arcana-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types, traits, and error definitions for Arcana Cloud Rust"

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sqlx = { workspace = true, optional = true }
validator.workspace = true
shaku.workspace = true
tracing.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[features]
default = ["sqlx"]
sqlx = ["dep:sqlx"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:tracing-opentelemetry", "dep:tracing-subscriber"]
openapi = ["dep:utoipa"]

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
