[package]
name = "arcana-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Domain entities, value objects, and events for Arcana Cloud Rust"

[dependencies]
arcana-core.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
validator.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
