[package]
name = "arcana-grpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "gRPC service layer using Tonic for Arcana Cloud Rust"
build = "build.rs"

[dependencies]
arcana-core.workspace = true
arcana-config.workspace = true
arcana-jobs.workspace = true
arcana-repository.workspace = true
arcana-security.workspace = true
arcana-service.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde = { workspace = true }
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
tokio-stream = "0.1"
async-trait.workspace = true
reqwest = { version = "0.12", features = ["json"] }
shaku.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.14"
