[package]
name = "arcana-rest"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "REST API layer using Axum for Arcana Cloud Rust"

[dependencies]
arcana-core = { workspace = true, features = ["openapi"] }
arcana-config.workspace = true
arcana-jobs.workspace = true
arcana-security.workspace = true
arcana-service.workspace = true
axum = { workspace = true }
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["sync"] }
async-trait.workspace = true
shaku.workspace = true
shaku_axum.workspace = true
validator.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
arcana-repository.workspace = true
