[package]
name = "arcana-security"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Security module for Arcana Cloud Rust - JWT, RBAC, password hashing"

[dependencies]
arcana-core.workspace = true
arcana-config.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tracing.workspace = true
shaku.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
