[package]
name = "arcana-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Business logic service layer for Arcana Cloud Rust"

[dependencies]
arcana-core.workspace = true
arcana-domain.workspace = true
arcana-config.workspace = true
arcana-repository.workspace = true
arcana-security.workspace = true
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
validator.workspace = true
tokio = { workspace = true, features = ["sync"] }
shaku.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
mockall.workspace = true
