[package]
name = "arcana-audit-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sample audit plugin for Arcana Cloud Rust"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arcana-plugin-api = { workspace = true, features = ["wasm"] }
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
